--- a/virtual-keyboard/style.css
+++ b/virtual-keyboard/style.css
@@ -53,7 +53,7 @@
   background: rgba(255, 255, 255, 0.12);
 }
 
-.keyboard__key_on:active{
+.keyboard__key_on{
   background: rgba(249,255,95, 0.5);
 }
 
